Fix a few typos in the email templates

--- a/templates/reset mat khau.html
+++ b/templates/reset mat khau.html
@@ -3,12 +3,12 @@
 		<title>{{program}}</title>
 	</head>
 	<body>
-		<div>Xin chào, {{receiver_name}}</div>
+		<p>Xin chào {{receiver_name}},</p>
 		<p>Bạn đã yêu cầu đổi mật khẩu truy cập tại <a href='{{domain}}'>{{domain}}</a>. Đây là thông tin mới dùng để đăng nhập vào tài khoản của bạn</p>
 		<p><b>Tên đăng nhập:</b>{{email}}</p>
 		<p><b>Mật khẩu:</b>{{password}}</p>
-		<p>Sau khi đăng nhập thành công, bạn lên đổi lại mật khẩu trên.</p>
-		<p>Nếu bạn không phải là người đã yêu cầu đổi mật khẩu thì bạn có thể bỏ qua email này, Mật khẩu của bạn vẫn giữ nguyên.</p>
+		<p>Sau khi đăng nhập thành công, bạn nên đổi lại mật khẩu trên.</p>
+		<p>Nếu bạn không phải là người đã yêu cầu đổi mật khẩu thì bạn có thể bỏ qua email này, mật khẩu của bạn vẫn giữ nguyên.</p>
 		<p></p>
 		<p>Trân trọng,</p>
 		<p>{{company}}</p>
