--- a/public/administrator/modules/vouchers/pc1/templates/detail-table.html
+++ b/public/administrator/modules/vouchers/pc1/templates/detail-table.html
@@ -2,7 +2,7 @@
 <div class="table-responsive">
 	<table class="table table-striped  table-hover table-bordered">
 		
-		<tr><th class='text-center' style='width:30px'>Chọn</th><th>Tk nợ</th><th>Tiền {{ngMasterData.ma_nt}}</th> <th ng-show="ngMasterData.ma_nt!='VND'">Tiền quy đổi</th><th>Nhà cung cấp</th></tr>
+		<tr><th class='text-center' style='width:30px'>Chọn</th><th>Tk nợ</th><th>Tiền {{ngMasterData.ma_nt}}</th> <th ng-show="ngMasterData.ma_nt!='VND'">Tiền quy đổi</th><th>Nhà cung cấp</th><th>Vụ việc</th></tr>
 		
 		<tr ng-repeat="r in ngMasterData.details">
 			<td class='text-center'>
@@ -23,7 +23,10 @@
 				<div>{{ r.ten_kh}}</div>
 				<div style="font-size:12px"><i>{{ r.ma_kh}}</i></div>
 			</td>
-			
+			<td  style='cursor:pointer' ng-click='editDetail(r.line)'>
+				<div>{{r.ten_dt}}</div>
+				<div><i>{{r.ma_dt}}</i></div>
+			</td>
 			
 		</tr>
 		
