Thêm vụ việc vào các chứng từ liên quan

--- a/public/administrator/modules/vouchers/pc1/templates/detail-table.html
+++ b/public/administrator/modules/vouchers/pc1/templates/detail-table.html
@@ -35,6 +35,7 @@
 			<td  class='total' ng-data='ngMasterData.details' ng-sum ='tien_nt' ng-model='ngMasterData.t_tien_kh_nt'>{{ngMasterData.t_tien_kh_nt|number:2}}</td>
 			<td  class='total' ng-show="ngMasterData.ma_nt!='VND'" ng-data='ngMasterData.details' ng-sum='tien'  ng-model='ngMasterData.t_tien_kh' >{{ngMasterData.t_tien_kh|number:0}}</td>
 			<td  class='total'></td>
+			<td  class='total'></td>
 		</tr>
 		
 	</table>
