--- a/public/administrator/modules/vouchers/pkt/templates/detail-table.html
+++ b/public/administrator/modules/vouchers/pkt/templates/detail-table.html
@@ -2,7 +2,7 @@
 <div class="table-responsive">
 	<table class="table table-striped  table-hover table-bordered">
 		
-		<tr><th class='text-center' style='width:30px'>Chọn</th><th>Tk nợ</th><th>Tk có</th><th>Tiền {{ngMasterData.ma_nt}}</th> <th ng-show="ngMasterData.ma_nt!='VND'">Tiền quy đổi</th><th>Khách nợ</th><th>Khách có</th></tr>
+		<tr><th class='text-center' style='width:30px'>Chọn</th><th>Tk nợ</th><th>Tk có</th><th>Tiền {{ngMasterData.ma_nt}}</th> <th ng-show="ngMasterData.ma_nt!='VND'">Tiền quy đổi</th><th>Khách nợ</th><th>Khách có</th><th>Vụ việc</th></tr>
 		
 		<tr ng-repeat="r in ngMasterData.details">
 			<td class='text-center'>
@@ -30,13 +30,17 @@
 				<div>{{r.ten_kh_co}}</div>
 				<i style="font-size:12px">{{r.ma_kh_co}}</i>
 			</td>
-			
+			<td  style='cursor:pointer' ng-click='editDetail(r.line)'>
+				<div>{{r.ten_dt}}</div>
+				<div><i>{{r.ma_dt}}</i></div>
+			</td>
 		</tr>
 		
 		<tr ng-show='ngMasterData.details.length>0'>
 			<td colspan="2"  class='total'>Tổng cộng:</td>
 			<td  class='total' ng-data='ngMasterData.details' ng-sum ='tien_nt' ng-model='ngMasterData.t_tien_nt'>{{ngMasterData.t_tien_nt|number:2}}</td>
 			<td  class='total' ng-show="ngMasterData.ma_nt!='VND'" ng-data='ngMasterData.details' ng-sum='tien'  ng-model='ngMasterData.t_tien' >{{ngMasterData.t_tien|number:0}}</td>
+			<td  class='total'></td>
 			<td  class='total'></td>
 			<td  class='total'></td>
 			<td  class='total'></td>
