--- a/public/administrator/modules/lists/dmdt/templates/list.html
+++ b/public/administrator/modules/lists/dmdt/templates/list.html
@@ -1,12 +1,12 @@
 ﻿<stplistheader></stplistheader>
 <div class="table-responsive">
 	<table class ="table table-striped table-bordered">
-		<tr><th>#</th><th>Bộ phận</th></tr>
+		<tr><th>#</th><th>Vụ việc</th></tr>
 		<tr ng-repeat="r in list">
 			<td width='50px'> <input type="checkbox" ng-model="r.sel"/> </td>
 			<td   style='cursor:pointer' ng-click='edit(r._id)'>
-				<div><b>{{ r.ten_bp }}</b></div>
-				<div><i>{{ r.ma_bp}}</i></div>
+				<div><b>{{ r.ten_dt }}</b></div>
+				<div><i>{{ r.ma_dt}}</i></div>
 			</td>
 		</tr>
 	</table>
