--- a/public/administrator/modules/lists/users/templates/list.html
+++ b/public/administrator/modules/lists/users/templates/list.html
@@ -1,14 +1,20 @@
 ﻿<stplistheader btnadd='show:false'></stplistheader>
 <div class="table-responsive">
 	<table class ="table table-striped table-bordered">
-		<tr><th>#</th><th>Email</th><th>Tên</th></tr>
+		<tr><th>#</th><th>Email</th><th>Tên</th><th>Tình trạng</th><th>Đanh sách công ty</th></tr>
 		<tr ng-repeat="r in list">
 			<td width='50px'> <input type="checkbox" ng-model="r.sel"/> </td>
 			<td   style='cursor:pointer' ng-click='edit(r._id)'>
-				<div>{{r.email}}</div>
+				{{r.email}}
 			</td>
 			<td   style='cursor:pointer' ng-click='edit(r._id)'>
-				<div>{{r.name}}</div>
+				{{r.name}}
+			</td>
+			<td   style='cursor:pointer' ng-click='edit(r._id)'>
+				{{r.status?'Đang hoạt động':'Đã khóa'}}
+			</td>
+			<td>
+				<a href="#apps/{{r.email}}">Danh sách công ty</a>
 			</td>
 		</tr>
 	</table>
